help

(base) C:\Users\ckirshe>cd
C:\Users\ckirshe

(base) C:\Users\ckirshe>cd
C:\Users\ckirshe

(base) C:\Users\ckirshe>dir
 Volume in drive C is BOOTCAMP
 Volume Serial Number is 5697-5BAA

 Directory of C:\Users\ckirshe

01/28/2019  10:01 AM    <DIR>          .
01/28/2019  10:01 AM    <DIR>          ..
11/07/2018  08:59 AM    <DIR>          .anaconda
01/16/2019  05:27 PM    <DIR>          .conda
01/17/2019  08:10 PM                43 .condarc
11/12/2018  09:33 AM    <DIR>          .ipynb_checkpoints
11/07/2018  09:23 AM    <DIR>          .ipython
11/12/2018  08:38 AM    <DIR>          .jupyter
11/14/2018  10:28 AM    <DIR>          .matplotlib
09/02/2016  08:48 AM    <DIR>          .oracle_jre_usage
01/16/2019  05:26 PM    <DIR>          .pylint.d
11/07/2018  08:47 AM    <DIR>          .vscode
01/28/2019  10:01 AM                 0 3D
12/18/2018  05:45 PM    <DIR>          3D Objects
01/16/2019  05:35 PM    <DIR>          Anaconda3
01/28/2019  10:01 AM                 0 cd
01/28/2019  10:01 AM                 0 code
01/28/2019  10:01 AM                 0 conda
12/18/2018  05:45 PM    <DIR>          Contacts
01/16/2019  05:23 PM    <DIR>          Desktop
01/28/2019  10:01 AM                 0 dir
01/23/2019  11:23 AM    <DIR>          Documents
01/25/2019  12:00 PM    <DIR>          Downloads
01/22/2019  10:27 PM    <DIR>          Dropbox
11/14/2018  09:28 AM               170 example1.csv
12/18/2018  05:45 PM    <DIR>          Favorites
09/02/2016  03:37 PM    <DIR>          Intel
12/18/2018  05:45 PM    <DIR>          Links
11/28/2018  11:30 AM    <DIR>          logs
01/28/2019  10:01 AM                 0 mkdir
12/18/2018  05:45 PM    <DIR>          Music
01/18/2019  04:54 PM    <DIR>          OneDrive
12/20/2018  02:16 PM    <DIR>          Pictures
01/28/2019  10:01 AM                 0 pwd
01/28/2019  10:01 AM                 0 SAP
10/14/2018  06:49 PM    <DIR>          SAP Clients
10/14/2018  06:49 PM            13,774 sapgui.log
01/28/2019  10:01 AM                 0 Saved
12/18/2018  05:45 PM    <DIR>          Saved Games
12/18/2018  05:45 PM    <DIR>          Searches
12/06/2016  10:21 AM    <DIR>          Tracing
11/07/2018  09:24 AM               571 Untitled.ipynb
11/12/2018  08:41 AM             1,124 Untitled1.ipynb
11/14/2018  10:06 AM            49,809 Untitled2.ipynb
12/18/2018  05:45 PM    <DIR>          Videos
01/28/2019  10:01 AM                 0 wd
01/28/2019  10:01 AM                 0 whereami
01/28/2019  10:01 AM                 0 whoami
              18 File(s)         65,491 bytes
              30 Dir(s)   1,834,438,656 bytes free

(base) C:\Users\ckirshe>cd C:\Users\ckirshe\Documents\Python Scripts\python-datatypes-exercise

(base) C:\Users\ckirshe\Documents\Python Scripts\python-datatypes-exercise> conda env list
# conda environments:
#
base                  *  C:\Users\ckirshe\Anaconda3
groceries-env            C:\Users\ckirshe\Anaconda3\envs\groceries-env
rstudio                  C:\Users\ckirshe\Anaconda3\envs\rstudio


(base) C:\Users\ckirshe\Documents\Python Scripts\python-datatypes-exercise>
(base) C:\Users\ckirshe\Documents\Python Scripts\python-datatypes-exercise>cd groceries.py
The directory name is invalid.

(base) C:\Users\ckirshe\Documents\Python Scripts\python-datatypes-exercise>conda activate groceries.py
Could not find conda environment: groceries.py
You can list all discoverable environments with `conda info --envs`.


(base) C:\Users\ckirshe\Documents\Python Scripts\python-datatypes-exercise>conda activate groceries-env

(groceries-env) C:\Users\ckirshe\Documents\Python Scripts\python-datatypes-exercise>python version
(null): can't open file 'version': [Errno 2] No such file or directory

(groceries-env) C:\Users\ckirshe\Documents\Python Scripts\python-datatypes-exercise>python
Python 3.7.0 (default, Jun 28 2018, 08:04:48) [MSC v.1912 64 bit (AMD64)] :: Anaconda, Inc. on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> python groceries.py
  File "<stdin>", line 1
    python groceries.py
                   ^
SyntaxError: invalid syntax
>>> python groceries.py
  File "<stdin>", line 1
    python groceries.py
                   ^
SyntaxError: invalid syntax
>>> conda activate groceries-env
  File "<stdin>", line 1
    conda activate groceries-env
                 ^
SyntaxError: invalid syntax
>>> # groceries.py
...
>>> products = [
...     {"id":1, "name": "Chocolate Sandwich Cookies", "department": "snacks", "aisle": "cookies cakes", "price": 3.50},
...     {"id":2, "name": "All-Seasons Salt", "department": "pantry", "aisle": "spices seasonings", "price": 4.99},
...     {"id":3, "name": "Robust Golden Unsweetened Oolong Tea", "department": "beverages", "aisle": "tea", "price": 2.49},
...     {"id":4, "name": "Smart Ones Classic Favorites Mini Rigatoni With Vodka Cream Sauce", "department": "frozen", "aisle": "frozen meals", "price": 6.99},
...     {"id":5, "name": "Green Chile Anytime Sauce", "department": "pantry", "aisle": "marinades meat preparation", "price": 7.99},
...     {"id":6, "name": "Dry Nose Oil", "department": "personal care", "aisle": "cold flu allergy", "price": 21.99},
...     {"id":7, "name": "Pure Coconut Water With Orange", "department": "beverages", "aisle": "juice nectars", "price": 3.50},
...     {"id":8, "name": "Cut Russet Potatoes Steam N' Mash", "department": "frozen", "aisle": "frozen produce", "price": 4.25},
...     {"id":9, "name": "Light Strawberry Blueberry Yogurt", "department": "dairy eggs", "aisle": "yogurt", "price": 6.50},
...     {"id":10, "name": "Sparkling Orange Juice & Prickly Pear Beverage", "department": "beverages", "aisle": "water seltzer sparkling water", "price": 2.99},
...     {"id":11, "name": "Peach Mango Juice", "department": "beverages", "aisle": "refrigerated", "price": 1.99},
...     {"id":12, "name": "Chocolate Fudge Layer Cake", "department": "frozen", "aisle": "frozen dessert", "price": 18.50},
...     {"id":13, "name": "Saline Nasal Mist", "department": "personal care", "aisle": "cold flu allergy", "price": 16.00},
...     {"id":14, "name": "Fresh Scent Dishwasher Cleaner", "department": "household", "aisle": "dish detergents", "price": 4.99},
...     {"id":15, "name": "Overnight Diapers Size 6", "department": "babies", "aisle": "diapers wipes", "price": 25.50},
...     {"id":16, "name": "Mint Chocolate Flavored Syrup", "department": "snacks", "aisle": "ice cream toppings", "price": 4.50},
...     {"id":17, "name": "Rendered Duck Fat", "department": "meat seafood", "aisle": "poultry counter", "price": 9.99},
...     {"id":18, "name": "Pizza for One Suprema Frozen Pizza", "department": "frozen", "aisle": "frozen pizza", "price": 12.50},
...     {"id":19, "name": "Gluten Free Quinoa Three Cheese & Mushroom Blend", "department": "dry goods pasta", "aisle": "grains rice dried goods", "price": 3.99},
...     {"id":20, "name": "Pomegranate Cranberry & Aloe Vera Enrich Drink", "department": "beverages", "aisle": "juice nectars", "price": 4.25}
... ] # based on data from Instacart: https://www.instacart.com/datasets/grocery-shopping-2017
>>>
>>> print(products)
[{'id': 1, 'name': 'Chocolate Sandwich Cookies', 'department': 'snacks', 'aisle': 'cookies cakes', 'price': 3.5}, {'id': 2, 'name': 'All-Seasons Salt', 'department': 'pantry', 'aisle': 'spices seasonings', 'price': 4.99}, {'id': 3, 'name': 'Robust Golden Unsweetened Oolong Tea', 'department': 'beverages', 'aisle': 'tea', 'price': 2.49}, {'id': 4, 'name': 'Smart Ones Classic Favorites Mini Rigatoni With Vodka Cream Sauce', 'department': 'frozen', 'aisle': 'frozen meals', 'price': 6.99}, {'id': 5, 'name': 'Green Chile Anytime Sauce', 'department': 'pantry', 'aisle': 'marinades meat preparation', 'price': 7.99}, {'id': 6, 'name': 'Dry Nose Oil', 'department': 'personal care', 'aisle': 'cold flu allergy', 'price': 21.99}, {'id': 7, 'name': 'Pure Coconut Water With Orange', 'department': 'beverages', 'aisle': 'juice nectars', 'price': 3.5}, {'id': 8, 'name': "Cut Russet Potatoes Steam N' Mash", 'department': 'frozen', 'aisle': 'frozen produce', 'price': 4.25}, {'id': 9, 'name': 'Light Strawberry Blueberry Yogurt', 'department': 'dairy eggs', 'aisle': 'yogurt', 'price': 6.5}, {'id': 10, 'name': 'Sparkling Orange Juice & Prickly Pear Beverage', 'department': 'beverages', 'aisle': 'water seltzer sparkling water', 'price': 2.99}, {'id': 11, 'name': 'Peach Mango Juice', 'department': 'beverages', 'aisle': 'refrigerated', 'price': 1.99}, {'id': 12, 'name': 'Chocolate Fudge Layer Cake', 'department': 'frozen', 'aisle': 'frozen dessert', 'price': 18.5}, {'id': 13, 'name': 'Saline Nasal Mist', 'department': 'personal care', 'aisle': 'cold flu allergy', 'price': 16.0}, {'id': 14, 'name': 'Fresh Scent Dishwasher Cleaner', 'department': 'household', 'aisle': 'dish detergents', 'price': 4.99}, {'id': 15, 'name': 'Overnight Diapers Size 6', 'department': 'babies', 'aisle': 'diapers wipes', 'price': 25.5}, {'id': 16, 'name': 'Mint Chocolate Flavored Syrup', 'department': 'snacks', 'aisle': 'ice cream toppings', 'price': 4.5}, {'id': 17, 'name': 'Rendered Duck Fat', 'department': 'meat seafood', 'aisle': 'poultry counter', 'price': 9.99}, {'id': 18, 'name': 'Pizza for One Suprema Frozen Pizza', 'department': 'frozen', 'aisle': 'frozen pizza', 'price': 12.5}, {'id': 19, 'name': 'Gluten Free Quinoa Three Cheese & Mushroom Blend', 'department': 'dry goods pasta', 'aisle': 'grains rice dried goods', 'price': 3.99}, {'id': 20, 'name': 'Pomegranate Cranberry & Aloe Vera Enrich Drink', 'department': 'beverages', 'aisle': 'juice nectars', 'price': 4.25}]
>>>
>>> # TODO: write some Python code here to produce the desired output
...
